--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "comfyui-impact-subpack"
 description = "This node pack provides nodes that complement the Impact Pack, such as the UltralyticsDetectorProvider."
-version = "1.3"
+version = "1.3.1"
 license = { file = "LICENSE.txt" }
-dependencies = ["matplotlib", "ultralytics==8.3.40"]
+dependencies = ["matplotlib", "ultralytics"]
 
 [project.urls]
 Repository = "https://github.com/ltdrdata/ComfyUI-Impact-Subpack"
